# mlir-standalone-template

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  apt_install_llvm.sh  requirements.txt
.github/workflows/: build-and-test.yml
build_tools/: build_mlir.sh  llvm_version.txt
cmake/modules/: sanitizers.cmake
include/Standalone/: CMakeLists.txt  StandaloneDialect.h  StandaloneDialect.td  StandaloneOps.h  StandaloneOps.td  StandaloneTypes.h  StandaloneTypes.td
lib/Standalone/: CMakeLists.txt  StandaloneDialect.cpp  StandaloneOps.cpp  StandaloneTypes.cpp
standalone-lsp-server/: CMakeLists.txt  standalone-lsp-server.cpp
standalone-opt/: standalone-opt.cpp
test/: CMakeLists.txt  lit.cfg.py
test/Standalone/: add.mlir  dummy.mlir  foo2.mlir
